--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 PERSIST_DIRECTORY=db
 MODEL_TYPE=GPT4All
 MODEL_PATH=models/ggml-gpt4all-j-v1.3-groovy.bin
-EMBEDDINGS_MODEL_NAME=all-MiniLM-L6-v2
+EMBEDDINGS_MODEL_NAME=BAAI/bge-large-en-v1.5
 MODEL_N_CTX=1000
 TARGET_SOURCE_CHUNKS=4
